[gd_scene load_steps=14 format=3 uid="uid://bksfx2cmvsss8"]

[ext_resource type="Script" path="res://Dongeon/Mage/mage.gd" id="1_2qgtv"]
[ext_resource type="Texture2D" uid="uid://b8t1haipdnlwh" path="res://Assests/Mage_.png" id="2_l3o7v"]
[ext_resource type="Script" path="res://Player/StateMachine/state_machine.gd" id="3_kbx5j"]
[ext_resource type="Script" path="res://Dongeon/Mage/StateMachine/mage_idle.gd" id="4_ojoqq"]
[ext_resource type="Script" path="res://Dongeon/Mage/StateMachine/mage_death_ray.gd" id="5_6uenj"]

[sub_resource type="Animation" id="Animation_krghm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 3)]
}

[sub_resource type="Animation" id="Animation_dpe0x"]
resource_name = "death_ray"
step = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.633333, 0.766667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 2), Vector2i(1, 2), Vector2i(2, 2), Vector2i(3, 2), Vector2i(4, 2), Vector2i(5, 2), Vector2i(6, 2), Vector2i(7, 2)]
}

[sub_resource type="Animation" id="Animation_cnofr"]
resource_name = "idle"
length = 0.9
step = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4, 0.533333, 0.666667, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_s20tm"]
resource_name = "teleport_away"
length = 1.2
step = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6, 0.666667, 0.733333, 0.8, 0.866667, 0.933333, 1, 1.06667, 1.13333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 3), Vector2i(1, 3), Vector2i(2, 3), Vector2i(3, 3), Vector2i(4, 3), Vector2i(5, 3), Vector2i(6, 3), Vector2i(7, 3), Vector2i(8, 3), Vector2i(9, 3), Vector2i(0, 5), Vector2i(1, 5), Vector2i(2, 5), Vector2i(3, 5), Vector2i(4, 5), Vector2i(5, 5), Vector2i(6, 5), Vector2i(7, 5)]
}

[sub_resource type="Animation" id="Animation_kj8qm"]
resource_name = "teleport_in"
step = 0.0333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(9, 5), Vector2i(8, 5), Vector2i(7, 5), Vector2i(6, 5), Vector2i(5, 5), Vector2i(4, 5), Vector2i(3, 5), Vector2i(2, 5), Vector2i(1, 5), Vector2i(0, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v6lbi"]
_data = {
"RESET": SubResource("Animation_krghm"),
"death_ray": SubResource("Animation_dpe0x"),
"idle": SubResource("Animation_cnofr"),
"teleport_away": SubResource("Animation_s20tm"),
"teleport_in": SubResource("Animation_kj8qm")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b8f8p"]
size = Vector2(58, 111)

[sub_resource type="CircleShape2D" id="CircleShape2D_efcxe"]
radius = 300.0

[node name="Mage" type="CharacterBody2D"]
script = ExtResource("1_2qgtv")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(5, 5)
texture = ExtResource("2_l3o7v")
offset = Vector2(30, -5)
hframes = 10
vframes = 6
frame = 31

[node name="AnimationMage" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v6lbi")
}

[node name="CollisionShape2D" type="Area2D" parent="."]
position = Vector2(-3.5, -0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionShape2D"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_b8f8p")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_kbx5j")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("mage")]
script = ExtResource("4_ojoqq")
mage = NodePath("../..")

[node name="DeathRay" type="Node" parent="StateMachine" node_paths=PackedStringArray("mage")]
script = ExtResource("5_6uenj")
mage = NodePath("../..")

[node name="CastDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CastDetection"]
shape = SubResource("CircleShape2D_efcxe")

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="CastBeam" type="RayCast2D" parent="."]
position = Vector2(105, 12)
scale = Vector2(1, 25)
target_position = Vector2(364, 0)
hit_from_inside = true

[node name="CastDelay" type="Timer" parent="."]
process_callback = 0
wait_time = 0.2
one_shot = true

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 12.0
autostart = true

[connection signal="animation_finished" from="AnimationMage" to="StateMachine/Idle" method="_on_animation_mage_animation_finished"]
[connection signal="animation_finished" from="AnimationMage" to="StateMachine/DeathRay" method="_on_animation_mage_animation_finished"]
[connection signal="area_entered" from="CastDetection" to="StateMachine/Idle" method="_on_cast_detection_area_entered"]
[connection signal="area_exited" from="CastDetection" to="StateMachine/Idle" method="_on_cast_detection_area_exited"]
[connection signal="timeout" from="CastDelay" to="StateMachine/DeathRay" method="_on_cast_delay_timeout"]
[connection signal="timeout" from="IdleTimer" to="StateMachine/Idle" method="_on_idle_timer_timeout"]
